Fixed overflow in contact page

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -5,12 +5,20 @@
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
     
+    
    
+}
+
+*, *::after, *::before{
+    margin: 0;
+    padding: 0;
 }
 
 body{
     background: #f7f7f7;
-    overflow-x: hidden;
+    overflow-x:hidden;
+   
+    
     /*background-image: url("Mac\ Wallpaper.png");
     background-repeat: no-repeat;
     background-position: fixed;
@@ -21,6 +29,17 @@ body{
     max-width: 95%;
     margin: 0 auto;
     padding: 0px 20px ;
+    
+   
+}
+
+.section-1{
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    position: relative; 
+    overflow-y: hidden;
+    
 }
 
 header{
@@ -133,18 +152,22 @@ nav .navbar li.btn:hover a{
     
 }
 
+
+
 /* form starts here*/
 
 form{
     background: #314247;
     margin: 100px auto;
     width: 640px;
-    max-width: 95%;   
+    max-width: 95%;  
+     
     opacity: 0.7;
     color: #79948d;
     border-radius: 20px;
     box-shadow: 8px 8px 0 #1b2021;
     padding: 55px 30px;
+   
    
 }
 
@@ -248,10 +271,12 @@ form .half .item input:focus, form .full textarea:focus:hover{
 @media screen and (max-width:930px) {
     nav .hamb{
         display: initial;
+        
     }
 
     .click{
         top:46px;
+        
 
     }
 
@@ -276,12 +301,12 @@ form .half .item input:focus, form .full textarea:focus:hover{
         position: absolute;
         top: 0px;
         right: -65%;
-        bottom: 0;
+        bottom: 0 ;
         left: 90pxpx;
         width: 40%;
         height: 100%;
         background:#314247;
-       
+        
         z-index: 2;
         padding: 6% 9%;
         transition: .5s right;
